# bazaar

./: .gitignore  Cargo.toml  Dockerfile  Notes.md  Procfile  README.md  Todo.md  app.json
examples/: generate_model_code.rs
scripts/: foreign_keys.sql  import_data.sh  install_db_extensions.sql  schema.sql  setup.sh  table_schema.sh
scripts/data/: address.csv  cart.csv  cart_line.csv  category.csv  client.csv  country.csv  currency.csv  order_line.csv  orders.csv  photo.csv  product.csv  product_availability.csv  product_photo.csv  review.csv  user_info.csv  users.csv
scripts/tables/: address.sql~  api_key.sql  api_key.sql~  base.sql  cart.sql  cart_line.sql  category.sql  client.sql~  country.sql~  currency.sql  currency.sql~  exchange_rate.sql  exchange_rate.sql~  invoice.sql~  order_line.sql  order_line.sql~  orders.sql~  organization.sql  organization.sql~  photo.sql~  photo_sizes.sql  photo_sizes.sql~  product.sql  product.sql~  product_availability.sql  product_availability.sql~  product_category.sql  product_category.sql~  product_photo.sql  product_photo.sql~  product_review.sql  record.sql  review.sql~  settings.sql  settings.sql~  user_info.sql  user_info.sql~  user_location.sql  user_location.sql~  user_review.sql  (+5 more)
src/: .main.rs.swp  config.rs  globals.rs  lib.rs  main.rs
src/services/: mod.rs  product_api.rs  product_service.rs
